# openapi-axum

./: .env  Cargo.toml  README.md  TODO.md  docker-compose.yml
entity/: Cargo.toml
migration/: Cargo.toml
src/: config.rs  db_error.rs  graceful_shutdown.rs  logging.rs  main.rs
src/api/: docs.rs  meta.rs  mod.rs
src/api/meta/: healthz.rs  meta.rs  mod.rs  root.rs
src/api/post/: create_post.rs  get_posts.rs  mod.rs
