[package]
name = "openapi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = { version = "0.11.0", features = ["redoc", "axum", "axum-extra", "macros"] }
axum = { version = "0.6.18", features = ["tracing", "macros"] }
axum-extra = "0.7.4"
axum-macros = "0.3.7"
figment = { version = "0.10", features = ["toml", "env"] }
http = "0.2.9"
schemars = "0.8.12"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors", "trace", "compression-full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
utoipa = { version = "3.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
