[package]
name = "openapi-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
axum = { version = "0.6.18", features = ["tracing"] }
figment = { version = "0.10", features = ["toml", "env"] }
http = "0.2.9"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors", "trace", "compression-full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
utoipa = { version = "3.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
dotenv = "0.15.0"

sea-orm = { version = "0.11.3", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
entity = { path = "entity" }
migration = { path = "migration" }
serde_json = "1.0.97"
